Fixed layout issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -48,7 +48,7 @@ main {
 
 .card {
     background-color: white;
-    display: flex !important;
+    display: flex;
     align-items: center;
     padding: 15px 15px;
     border: 1px solid lightgrey;
